# xmind2testcase

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  FRONTEND_TESTING_CHECKLIST.md  LICENSE  Pipfile  README.md  RELEASE_NOTES.md  alembic.ini  init.ps1  init.sh  pyproject.toml  pytest.ini  requirements.txt  samples.py  setup.py  test.csv
.github/workflows/: doc-check.yml
api/: README.md  config.py  main.py
api/core/: exceptions.py
api/models/: record.py
api/schemas/: common.py  record.py  testcase.py
api/services/: record.py  xmind_parser.py
docs/: 202602-数据资产v6.4.8(xmind2026版本).xmind  202602-数据资产v6.4.8(xmind8版本).xmind  test.xmind
docs/plans/: 2026-03-03-fastapi-migration-design.md  2026-03-03-fastapi-migration-implementation.md  2026-03-03-frontend-modernization-design.md  2026-03-03-init-script-implementation.md  2026-03-03-xmind2026-support-implementation.md  2026-03-03-zentao-csv-format-fix-implementation.md  2026-03-04-documentation-update-implementation.md  2026-03-04-modular-init-scripts.md  2026-03-04-ui-optimization-design.md  2026-03-06-preview-column-customization-plan.md
migrations/: env.py
migrations/versions/: a1f72c9cdcb0_initial_migration.py
scripts/: check_docs.py
scripts/modules/: detector.sh  error.sh  fallback.sh  state.sh  utils.sh
tests/: conftest.py  test_e2e.py  test_integration.py  test_utils.py
tests/scripts/: integration_test.sh  test_dev_mode.sh
webtool/: application.py  models.py
webtool/static/css/: preview.css
webtool/static/guide/: index.html  index.md
webtool/static/js/: preview.js
webtool/templates/: index.html  preview.html
xmind2cases/: __about__.py  cli.py  const.py  metadata.py  parser.py  testlink.py  utils.py  zentao.py
xmind2testcase/: cli.py  const.py  metadata.py  parser.py  testlink.py  utils.py  zentao.py
