[project]
name = "xmind2cases"
version = "1.7.1"
description = "XMind2Cases基于Python实现，提供了一个高效测试用例设计的解决方案！"
readme = "README.md"
requires-python = ">=3.12.12"
license = { text = "MIT" }
keywords = [
    "xmind2cases",
    "testcase",
    "test",
    "testing",
    "xmind",
    "思维导图",
    "XMind思维导图"
]
authors = [
    { name = "Poco", email = "kopohub@gmail.com" }
]
maintainers = [
    { name = "Poco", email = "kopohub@gmail.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "xmindparser>=0.1.0",
    "flask>=3.0.0",
    "arrow>=1.0.0",
    "click>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "twine>=5.0.0",
    "build>=0.10.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pre-commit>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/koco-co/xmind2cases"
Repository = "https://github.com/koco-co/xmind2cases"
Issues = "https://github.com/koco-co/xmind2cases/issues"

[project.scripts]
xmind2cases = "xmind2cases.cli:cli_main"

[dependency-groups]
dev = [
    "twine>=5.0.0",
    "build>=0.10.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "pre-commit>=3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
packages = ["xmind2cases", "webtool"]

[tool.hatch.build.targets.wheel]
packages = ["xmind2cases", "webtool"]

[tool.hatch.build.targets.wheel.shared-data]
"webtool/static" = "webtool/static"
"webtool/templates" = "webtool/templates"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning:xmindparser",
]
testpaths = ["tests"]
asyncio_mode = "auto"
